[project]
name = "MoonClaw"
version = "0.1.0"
description = "Agent"
readme = "README.md"
requires-python = ">=3.11, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
]
plugins = [
    "nonebot_plugin_orm",
    "nonebot_plugin_sentry",
    "nonebot_plugin_alconna",
    "nonebot_plugin_htmlrender",
    "nonebot_plugin_apscheduler",
    "nonebot_plugin_session",
    "nonebot_plugin_waiter",

    # Custom plugins
    "nonebot_plugin_access",
    "nonebot_plugin_alconna_extensions",
    "nonebot_plugin_bots",
    "nonebot_plugin_friend_add",
    "nonebot_plugin_larkhelp",
    "nonebot_plugin_larklang",
    "nonebot_plugin_larkuser",
    "nonebot_plugin_larkutils",
    "nonebot_plugin_openai",
    "nonebot_plugin_render",
    "nonebot_plugin_wolfram_alpha",
    "nonebot_plugin_chat",
    "nonebot_plugin_status_report",
    "nonebot_plugin_broadcast",
    "nonebot_plugin_status",
    "nonebot_plugin_version_manager",
]
plugin_dirs = []
builtin_plugins = []

[tool.poetry]
name = "moonlark"
version = "0.1.0"
description = "A new ChatBot"
package-mode = false
authors = ["XiaoDeng3386 <1744793737@qq.com>"]
license = "AGPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <4.0"
nonebot-plugin-sentry = ">=2.0.0, <3.0.0"

moonclaw-plugins = {path = "./src", develop = true}





[tool.poetry.group.dev.dependencies]
nb-cli = ">=1.4.2, <2.0.0"
ipykernel = ">=6.30.1,<8.0.0"
ruff = ">=0.13.0,<0.16.0"
pre-commit = ">=4.1.0, <5.0.0"
nonebug = "^0.4.3"
pytest-asyncio = "^1.3.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"






[tool.poetry.group.test.dependencies]
nonebug = "^0.4.3"
pytest-asyncio = "^1.3.0"
nonebot-adapter-console = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
pythonVersion = "3.11"
pythonPlatform = "All"
defineConstant = { PYDANTIC_V2 = true }
typeCheckingMode = "basic"
reportShadowedImports = false
exclude = ["**/.venv"]
reportUnusedCallResult = false

[tool.basedpyright]
typeCheckingMode = "standard"
pythonVersion = "3.11"
pythonPlatform = "All"
defineConstant = { PYDANTIC_V2 = true }
reportShadowedImports = false
exclude = ["**/.venv"]
reportUnusedCallResult = false

[tool.ruff]
extend-exclude = []
line-length = 120
target-version = "py311"

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

[tool.ruff.lint]
preview = true
ignore = [
    "B008",
    "B905",
    # "COM812",
    "E501",
    "FBT001",
    "FBT002",
    "ISC001",
    "PERF203",
    "PGH003",
    "PLC04",
    "RUF001",
    "RUF002",
    "RUF003",
    "RUF006",
    "RUF029",
    "RUF100",
    "S101",
    "S311",
    "S404",
    "SIM117",
    "TRY002",
    "TRY003",
]
select = [
    "A",
    "ANN001",
    "ARG",
    "ASYNC",
    "B",
    "C4",
    "COM",
    "DTZ",
    "E",
    "F",
    "FBT",
    "FLY",
    "FURB",
    "I",
    "ISC",
    "N",
    "NPY",
    "PERF",
    "PIE",
    "PGH",
    # "PL",
    "PT",
    "PTH",
    "PYI",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "SLF",
    "SLOT",
    "TCH",
    "TRY",
    "YTT",
]


[tool.ruff.lint.isort]
combine-as-imports = true
detect-same-package = true
extra-standard-library = ["typing_extensions"]
split-on-trailing-comma = true

[tool.black]
line-length = 120
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 120
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]
